<resources>
    <string name="app_name">Submission2</string>
    <string name="default_number">0</string>
    <string name="text_repositories">Repositories</string>
    <string name="text_followers">Followers</string>
    <string name="text_following">Following</string>
    <string name="text_username">Username</string>
    <string name="text_setting">Setting</string>
    <string name="text_bio">Bio</string>
    <string name="text_email">Email</string>
    <string name="text_name">Name</string>
    <string name="tab_text_followers">Followers</string>
    <string name="tab_text_following">Following</string>
    <string name="menu_favorite">Menu Favorite</string>
    <string name="menu_setting">Menu Setting</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="text_back">back</string>
    <string name="text_home">Home</string>
    <string name="text_favorite">Favorite</string>
    <string name="text_profile">Profile</string>
    <string name="text_no_available_data">no available data</string>
    <string name="text_search">Search</string>
</resources>